--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load widget_tweaks %}
 
 {% block title %}Start a New Topic{% endblock %}
 
@@ -10,21 +9,9 @@
 {% endblock %}
 
 {% block content %}
-<form method="post">
+<form method="post" novalidate>
     {% csrf_token %}
-    {% for field in form %}
-    <div class="form-group">
-        {{ field.label_tag }}
-
-        {{ field|add_class:'form-control' }}
-
-        {% if field.help_text %}
-        <small class="form-text text-muted">
-            {{ field.help_text }}
-        </small>
-        {% endif %}
-    </div>
-    {% endfor %}
+    {% include 'includes/form.html' %}
     <button type="submit" class="btn btn-success">Post</button>
 </form>
 {% endblock %}
