--- a/templates/topics.html
+++ b/templates/topics.html
@@ -30,7 +30,7 @@
         <td>{{ topic.starter.username }}</td>
         <td>0</td>
         <td>0</td>
-        <td>{{ topic.last_updated }}</td>
+        <td>{{ topic.last_update }}</td>
     </tr>
     {% endfor %}
     </tbody>
