--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,13 +1,32 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% endblock stylesheet %}
 
 {% block body %} <!-- aqui anteriormente BLOCK CONTENT, alterou para BLOCK BODY após envelopar tudo no base.html -->
 <div class="container">
-    <h2>Sign up</h2>
-    <form method="post" novalidate>
-        {% csrf_token %} <!-- inclui o cross forgery protect -->
-        {% include 'includes/form.html' %} <!-- incluido após o commit para deixar mais "bonito". -->
+    <h1 class="text-center logo my-4">
+        <a href="{% url 'home' %}">Django Boards</a>
+    </h1>
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 col-sm-12">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title">Sign up</h3>
+                    <form method="post" novalidate>
+                        {% csrf_token %}
+                        {% include 'includes/form.html' %} <!-- incluido após o commit para deixar mais "bonito". -->
         <button type="submit" class="btn btn-primary">Create an account</button>
     </form>
+</div>
+                <div class="card-footer text-muted text-center">
+                    Already have an account? <a href="#">Log in</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock body %} <!-- boa prática fechar o endblock com o nome correspondente -->
 
