--- a/templates/topics.html
+++ b/templates/topics.html
@@ -24,11 +24,11 @@
     </tr>
     </thead>
     <tbody>
-    {% for topic in board.topics.all %}
+    {% for topic in topics %}
     <tr>
-        <td>{{ topic.subject }}</td>
+        <td><a href="{% url 'topic_posts' board.pk topic.pk %}">{{ topic.subject }}</a></td>
         <td>{{ topic.starter.username }}</td>
-        <td>0</td>
+        <td>{{ topic.replies }}</td>
         <td>0</td>
         <td>{{ topic.last_update }}</td>
     </tr>
